--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
 <configuration>
 <testFailureIgnore>true</testFailureIgnore>
 <includes>
-<include>**/*Run.java</include>
+<include>**/*testRunner_smoke.java</include>
 </includes>
 </configuration>
 </plugin>
