--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,8 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
+encoding//src/test/resources/propertiesFile=UTF-8
+encoding//src/test/resources/propertiesFile/login.properties=UTF-16
+encoding//src/test/resources/test123=UTF-8
 encoding/<project>=UTF-8
