--- a/src/test/resources/propertiesFile/leadform.properties
+++ b/src/test/resources/propertiesFile/leadform.properties
@@ -1,10 +1,10 @@
 url=https://webserver-vil-sit.lfr.cloud/
 browser=chrome
-company_name=Welcome to iDEA
-address_1=Web Information Manager,National Informatics Centre
-address_2=A4B4, 3rd Floor, A Block,CGO Complex, Lodhi Road
-pinCode=110003
-contact_person_name=Vodafone Idea Ltd
+company_name=Welcome to Regression
+address_1=Yantra Park
+address_2=Thane
+pinCode=400604
+contact_person_name=SIT Team
 official_email_id=Vodafone_Idea@vil.com
 mobile_number=9989098978
 source=Instagram
